# Rattle

./: .gitignore  README.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/data/: exercises.js  players.js
frontend/src/router/: index.js
frontend/src/util/: countdown.js  numbers.js
frontend/src/views/: BattleModeView.vue  LandingPageView.vue  loading.html
gamemaster/: Cargo.toml
gamemaster/exercises/ex1/: config.json  info1.md  lib.rs  lib1.rs  solution1.md  task1.rs  test.rs  test1.rs
gamemaster/exercises/ex2/: config.json  info2.md  lib.rs  test.rs
gamemaster/exercises/ex3/: config.json  info2.md  lib.rs  test.rs
gamemaster/exercises/ex4/: config.json  lib.rs
gamemaster/exercises/ex5/: config.json  lib.rs  test.rs
gamemaster/exercises/ex6/: config.json  lib.rs  test.rs
gamemaster/exercises/ex7/: config.json  lib.rs  test.rs
gamemaster/src/: logic.rs  main.rs  main_new.rs  main_old.rs  sandbox.rs
