[package]
name = "gamemaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
env_logger = "0.9.1"
gist = "0.9.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0.145"
snafu = "0.7.1"
tempfile = "3.3.0"
log = "0.4.0"
serde_json = "1.0.85"
strum = { version = "0.24.1", features = [ "derive" ] }
tokio = { version = "1.9", features = ["macros", "time", "process", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["cors", "fs", "set-header", "trace"] }
octocrab = "0.17"
openssl = { version = "0.10", features = ["vendored"] }
